--- a/main.css
+++ b/main.css
@@ -9,6 +9,8 @@ footer {
     text-align: center;
     background-color: black;
     color: white;
+    clear: both; /*Keep footer below floats, fix projects page issue*/
+    padding: 20px 0;
 }
 
 .element {
@@ -22,13 +24,40 @@ footer {
     margin-bottom: 10px;
 }
 
+.projects {
+    font-size: 0; /*remove whitespace gap to fix formating issue, returned to 16 in text*/
+}
+
+.project-item {
+    font-size: 16px;
+    display: inline-block;
+    vertical-align: top;
+    width: 48%;
+    margin: 1%;
+    background-color: white;
+    box-sizing: border-box;
+}
+
+.clearfix::after
+{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.image {
+    float: left;
+    margin-right: 20px; 
+}
 video {
-    width: 400px;
+    width: 150px;
     padding: 25px;
     margin: 15px;
     background-color: black;
     border: 2px white solid;
     box-shadow: 10px 10px 5px black;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .footer-img img { 
@@ -45,3 +74,4 @@ video {
 .footer-left {
     text-align: left;
 }
+
